# deeplearning-project-template

./: README.md  main.py  pyproject.toml
configs/: train.yaml.template
project/: lit_autoencoder.py  lit_mnist.py
project/data_module/: data_modules.py
project/model/: model.py
project/tools/: test.py  train.py  utils.py
