[tool.poetry]
name = "deeplearning-project-template"
version = "0.1.0"
description = ""
authors = ["Ning Lu"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.3.2"
pytorch-lightning = "^1.2.6"
anyconfig = "^0.10.0"
torchvision = "^0.9.1"
easydict = "*"

[tool.poetry.dev-dependencies]
ipython = "^7.22.0"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
